--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ctparental (4.21.01-1.0) unstable; urgency=medium
+
+  * indentation.
+  * formatage de lignes de commentaires trop longues.
+  * corrections d'orthographe dans les commentaires.
+  * correction d'erreur de certificat invalide. 
+ -- Guillaume marsat <CTparental1@laposte.net>  Sat, 20 Jan 2018 13:34:21 +0100
+ 
 ctparental (4.21.00-1.0) unstable; urgency=medium
 
   * ajout du temps de connexion et de navigation déjà utilisé dans l'interface administration.
