modifié :         CTparental 	modifié :         locale/fr_FR/LC_MESSAGES/ctparental.mo 	modifié :         locale/fr_FR/LC_MESSAGES/ctparental.po

--- a/locale/fr_FR/LC_MESSAGES/ctparental.po
+++ b/locale/fr_FR/LC_MESSAGES/ctparental.po
@@ -154,148 +154,148 @@ msgid "Use"
 msgstr "Usage"
 
 msgid ""
-"\t=> Install parental control on the computer (desktop PC). Can be used with\n"
-"\t   an additional parameter to specify a source path for the redirection page.\n"
-"\t   example: CTparental -dirhtml -i /home/toto/html/\n"
-"\t   if no option a default page is used."
+"\t    => Install parental control on the computer (desktop PC). Can be used with\n"
+"\t      an additional parameter to specify a source path for the redirection page.\n"
+"\t      example: CTparental -dirhtml -i /home/toto/html/\n"
+"\t      if no option a default page is used."
 msgstr ""
-"\t=> Installe le contrôle parental sur l'ordinateur (PC de bureau). Peut être utilisé avec\n"
-"\t   un paramètre supplémentaire pour indiquer un chemin de sources pour la page web de redirection.\n"
-"\t   exemple : CTparental -i -dirhtml /home/toto/html/\n"
-"\t   si pas d'option la page par défaut est utilisée."
+"\t    => Installe le contrôle parental sur l'ordinateur (PC de bureau). Peut être utilisé avec\n"
+"\t      un paramètre supplémentaire pour indiquer un chemin de sources pour la page web de redirection.\n"
+"\t      exemple : CTparental -i -dirhtml /home/toto/html/\n"
+"\t      si pas d'option la page par défaut est utilisée."
 
-msgid "\t=> uninstall the Parental Control Computer (desktop PC)"
-msgstr "\t=> désinstalle le contrôle parental de l'ordinateur (PC de bureau)"
+msgid "\t    => uninstall the Parental Control Computer (desktop PC)"
+msgstr "\t    => désinstalle le contrôle parental de l'ordinateur (PC de bureau)"
 
-msgid "\t=> updates parental control from the blacklist of the University of Toulouse"
-msgstr "\t=> met à jour le contrôle parental à partir de la blacklist de l'université de Toulouse"
+msgid "\t    => updates parental control from the blacklist of the University of Toulouse"
+msgstr "\t    => met à jour le contrôle parental à partir de la blacklist de l'université de Toulouse"
 
-msgid "\t=> To be done after each change of the file $DNS_FILTER_OSSI"
-msgstr "\t=> A faire après chaque modification du fichier $DNS_FILTER_OSSI"
+msgid "\t    => To be done after each change of the file $DNS_FILTER_OSSI"
+msgstr "\t    => A faire après chaque modification du fichier $DNS_FILTER_OSSI"
 
-msgid "\t=> To be done after each change of the file $DREAB"
-msgstr "\t=> A faire après chaque modification du fichier $DREAB"
+msgid "\t    => To be done after each change of the file $DREAB"
+msgstr "\t    => A faire après chaque modification du fichier $DREAB"
 
-msgid "\t=> Enable parental control"
-msgstr "\t=> Activer le contrôle parental"
+msgid "\t    => Enable parental control"
+msgstr "\t    => Activer le contrôle parental"
 
-msgid "\t=> Disable parental control"
-msgstr "\t=> Désactiver le contrôle parental"
+msgid "\t    => Disable parental control"
+msgstr "\t    => Désactiver le contrôle parental"
 
 msgid ""
-"\t=> Set the filter mode by whitelist or blacklist (default)\n"
-"\t   and the categories that you want to activate."
+"\t    => Set the filter mode by whitelist or blacklist (default)\n"
+"\t      and the categories that you want to activate."
 msgstr ""
-"\t=> Configure le mode de filtrage par liste blanche ou par liste noire (défaut)\n"
-"\t   ainsi que les catégories que vous voulez activer."
+"\t    => Configure le mode de filtrage par liste blanche ou par liste noire (défaut)\n"
+"\t      ainsi que les catégories que vous voulez activer."
 
-msgid "\t=> Reset the default active categories and blacklist filtering."
-msgstr "\t=> Remet les catégories actives par défaut et le filtrage par blacklist."
+msgid "\t    => Reset the default active categories and blacklist filtering."
+msgstr "\t    => Remet les catégories actives par défaut et le filtrage par blacklist."
 
-msgid "\t=> Enable and configure the login time restrictions for users."
-msgstr "\t=> Active et paramètre les restrictions horaires de login pour les utilisateurs."
+msgid "\t    => Enable and configure the login time restrictions for users."
+msgstr "\t    => Active et paramètre les restrictions horaires de login pour les utilisateurs."
 
-msgid "\t=> Disable the login time restrictions for users."
-msgstr "\t=> Désactive les restrictions horaires de login pour les utilisateurs."
+msgid "\t    => Disable the login time restrictions for users."
+msgstr "\t    => Désactive les restrictions horaires de login pour les utilisateurs."
 
 msgid ""
-"\t=> updates the redirect page from a source directory or default.\n"
-"\t   examples:\n"
-"\t           - With a source directory: CTparental -uhtml -dirhtml /home/toto/html/\n"
-"\t           - Default: CTparental -uhtml\n"
-"\t   also lets you change the login couple password of the web interface."
+"\t    => updates the redirect page from a source directory or default.\n"
+"\t      examples:\n"
+"\t              - With a source directory: CTparental -uhtml -dirhtml /home/toto/html/\n"
+"\t              - Default: CTparental -uhtml\n"
+"\t      also lets you change the login couple password of the web interface."
 msgstr ""
-"\t=> met à jour la page de redirection à partir d'un répertoire source ou par défaut.\n"
-"\t   exemples:\n"
-"\t           - avec un répertoire source : CTparental -uhtml -dirhtml /home/toto/html/\n"
-"\t           - par défaut : CTparental -uhtml\n"
-"\t   permet aussi de changer le couple identifiant-mot de passe de l'interface web."
+"\t    => met à jour la page de redirection à partir d'un répertoire source ou par défaut.\n"
+"\t      exemples:\n"
+"\t              - avec un répertoire source : CTparental -uhtml -dirhtml /home/toto/html/\n"
+"\t              - par défaut : CTparental -uhtml\n"
+"\t      permet aussi de changer le couple identifiant-mot de passe de l'interface web."
 
-msgid "\t=> Enable the automatic update of the Toulouse blacklist (every 7 days)."
-msgstr "\t=> Active la mise à jour automatique de la blacklist de Toulouse (tous les 7 jours)."
+msgid "\t    => Enable the automatic update of the Toulouse blacklist (every 7 days)."
+msgstr "\t    => Active la mise à jour automatique de la blacklist de Toulouse (tous les 7 jours)."
 
-msgid "\t=> Disable the automatic update of the Toulouse blacklist."
-msgstr "\t=> Désactive la mise à jour automatique de la blacklist de Toulouse."
+msgid "\t    => Disable the automatic update of the Toulouse blacklist."
+msgstr "\t    => Désactive la mise à jour automatique de la blacklist de Toulouse."
 
-msgid "\t=> as -dl but only if there is no update for more than 7 days."
-msgstr "\t=> comme -dl mais seulement s'il n'y a pas eu de mise à jour depuis plus de 7 jours."
+msgid "\t    => as -dl but only if there is no update for more than 7 days."
+msgstr "\t    => comme -dl mais seulement s'il n'y a pas eu de mise à jour depuis plus de 7 jours."
 
 msgid ""
-"\t=> if placed after -i or -u allows not install / uninstall the dependencies, useful if\n"
-"\t   we prefer to install them by hand, or for the postinst and prerm script of deb.\n"
-"\t   examples:\n"
-"\t   CTparental -i -nodep\n"
-"\t   CTparental -dirhtml -i /home/toto/html/ -nodep\n"
-"\t   CTparental -u -nodep"
+"\t    => if placed after -i or -u allows not install / uninstall the dependencies, useful if\n"
+"\t      we prefer to install them by hand, or for the postinst and prerm script of deb.\n"
+"\t      examples:\n"
+"\t              CTparental -i -nodep\n"
+"\t              CTparental -dirhtml -i /home/toto/html/ -nodep\n"
+"\t              CTparental -u -nodep"
 msgstr ""
-"\t=> si placé aprés -i ou -u permet de ne pas installer/désinstaller les dépendances, utiles si\n"
-"\t   on préfère les installer à la main, ou pour le script de postinst et prerm du deb.\n"
-"\t   exemples:\n"
-"\t           CTparental -i -nodep\n"
-"\t           CTparental -i -dirhtml /home/toto/html/ -nodep\n"
-"\t           CTparental -u -nodep"
+"\t    =>     si placé aprés -i ou -u permet de ne pas installer/désinstaller les dépendances, utiles si\n"
+"\t      on préfère les installer à la main, ou pour le script de postinst et prerm du deb.\n"
+"\t      exemples:\n"
+"\t              CTparental -i -nodep\n"
+"\t              CTparental -i -dirhtml /home/toto/html/ -nodep\n"
+"\t              CTparental -u -nodep"
 
-msgid "\t=> used only for the postinst and prerm script."
-msgstr "\t=> utilisé uniquement pour les scripts de postinst et prerm."
+msgid "   => used only for the postinst and prerm script."
+msgstr "   => utilisé uniquement pour les scripts de postinst et prerm."
 
 msgid ""
-"\t=> Enable a group of privileged users that will not undergo filtering.\n"
-"\t   exemples:\n"
-"\t           CTparental -gctulist\n"
-"\t           Comment all users that you want to filter in $FILE_GCTOFFCONF\n"
-"\t           CTparental -gctalist"
+"\t    => Enable a group of privileged users that will not undergo filtering.\n"
+"\t      exemples:\n"
+"\t              CTparental -gctulist\n"
+"\t              Comment all users that you want to filter in $FILE_GCTOFFCONF\n"
+"\t              CTparental -gctalist"
 msgstr ""
-"\t=> Active un groupe d'utilsiateurs privilégiés ne subissant pas le filtrage.\n"
-"\t   exemples:\n"
-"\t           CTparental -gctulist\n"
-"\t           Commenter tous les utilisateurs que vous voulez filtrer dans $FILE_GCTOFFCONF\n"
-"\t           CTparental -gctalist"
+"\t    => Active un groupe d'utilsiateurs privilégiés ne subissant pas le filtrage.\n"
+"\t      exemples:\n"
+"\t              CTparental -gctulist\n"
+"\t              Commenter tous les utilisateurs que vous voulez filtrer dans $FILE_GCTOFFCONF\n"
+"\t              CTparental -gctalist"
 
-msgid "\t=> Disable privileged group."
-msgstr "\t=> Supprime le groupe de privilégiés ."
+msgid "\t    => Disable privileged group."
+msgstr "\t    => Supprime le groupe de privilégiés ."
 
 msgid "all users of the system undergo the filtering!"
 msgstr "tous les utilisateurs du système subissent le filtrage !"
 
-msgid "\t=> Update the config file ,"
-msgstr "\t=> Met à jour le fichier de configuration,"
+msgid "\t    => Update the config file ,"
+msgstr "\t    => Met à jour le fichier de configuration,"
 
-msgid "\t=> Add / Delete users in the ctoff group based on the config file, $FILE_GCTOFFCONF"
-msgstr "\t=> Ajoute/Supprime les utilisateurs dans le groupe ctoff en fonction du fichier de configuration, $FILE_GCTOFFCONF"
+msgid "\t    => Add / Delete users in the ctoff group based on the config file, $FILE_GCTOFFCONF"
+msgstr "\t    => Ajoute/Supprime les utilisateurs dans le groupe ctoff en fonction du fichier de configuration, $FILE_GCTOFFCONF"
 
-msgid "\t=> Enable rules of custom firewall."
-msgstr "\t=> Active les règles de pare-feu personnalisées."
+msgid "\t    => Enable rules of custom firewall."
+msgstr "\t    => Active les règles de pare-feu personnalisées."
 
-msgid "\t=> Disable rules of custom firewall."
-msgstr "\t=> Désactive les règles de pare-feu personnalisées."
-
-msgid ""
-"\t=> Export configuration.\n"
-"\t   exemple:\n"
-"\t           CTparental -exp /home/myhomedir/"
-msgstr ""
-"\t=> Exporter la configuration.\n"
-"\t   exemple:\n"
-"\t           CTparental -exp /home/myhomedir/"
+msgid "\t    => Disable rules of custom firewall."
+msgstr "\t    => Désactive les règles de pare-feu personnalisées."
 
 msgid ""
-"\t=> Import a configuration.\n"
-"\t   exemple:\n"
-"\t           CTparental -imp /home/myhomedir/CTparental.conf.yy.mm.dd.tar.gz"
+"\t    => Export configuration.\n"
+"\t      exemple:\n"
+"\t              CTparental -exp /home/myhomedir/"
 msgstr ""
-"\t=> Importer une configuration.\n"
-"\t   exemple:\n"
-"\t           CTparental -imp /home/myhomedir/CTparental.conf.yy.mm.dd.tar.gz"
+"\t    => Exporter la configuration.\n"
+"\t      exemple:\n"
+"\t              CTparental -exp /home/myhomedir/"
 
 msgid ""
-"\t=> For debugging only.\n"
-"\t   Enabling dnsmasq query log in the /var/log/dnsmasq.query.log file."
+"\t    => Import a configuration.\n"
+"\t      exemple:\n"
+"\t              CTparental -imp /home/myhomedir/CTparental.conf.yy.mm.dd.tar.gz"
 msgstr ""
-"\t=> Pour débogage exclusivement.\n"
-"\t   Activation du journal des requêtes dnsmasq dans le fichier /var/log/dnsmasq.query.log ."
+"\t    => Importer une configuration.\n"
+"\t      exemple:\n"
+"\t              CTparental -imp /home/myhomedir/CTparental.conf.yy.mm.dd.tar.gz"
 
-msgid "\t=> To disable dnsmasq query log in /var/log/dnsmasq.query.log ."
-msgstr "\t=> Pour désactiver le journal des requêtes dnsmasq dans /var/log/dnsmasq.query.log ."
+msgid ""
+"   => For debugging only.\n"
+"\t      Enabling dnsmasq query log in the /var/log/dnsmasq.query.log file."
+msgstr ""
+"   => Pour débogage exclusivement.\n"
+"\t      Activation du journal des requêtes dnsmasq dans le fichier /var/log/dnsmasq.query.log ."
+
+msgid "  => To disable dnsmasq query log in /var/log/dnsmasq.query.log ."
+msgstr "  => Pour désactiver le journal des requêtes dnsmasq dans /var/log/dnsmasq.query.log ."
 
 msgid ""
 "to add custom rules edit the file \n"
@@ -359,23 +359,23 @@ msgstr "X doit prendre une valeur entre 1 et $timesession \n"
 msgid "error recovering network settings"
 msgstr "erreur de récupération des paramètres réseaux"
 
-msgid "\t=> Enable the superuser of grub2."
-msgstr "\t=> Activer l'administrateur de grub2."
+msgid "    => Enable the superuser of grub2."
+msgstr "    => Activer l'administrateur de grub2."
 
-msgid "\t=> Disable the superuser of grub2."
-msgstr "\t=> Désactiver l'administrateur de grub2."
+msgid "    => Disable the superuser of grub2."
+msgstr "    => Désactiver l'administrateur de grub2."
 
-msgid "\t=> Disable default rules privoxy."
-msgstr "\t=> Désactiver les règles privoxy par défaut."
+msgid "\t    => Disable default rules privoxy."
+msgstr "\t    => Désactiver les règles privoxy par défaut."
 
-msgid "\t=> Enable default rules privoxy. (default is Enable)"
-msgstr "\t=> Activer les règles par défaut de privoxy."
+msgid "\t    => Enable default rules privoxy. (default is Enable)"
+msgstr "\t    => Activer les règles par défaut de privoxy."
 
-msgid "\t=> Enable redirect page."
-msgstr "\t=> Activer la page de redirection."
+msgid "\t    => Enable redirect page."
+msgstr "\t    => Activer la page de redirection."
 
-msgid "\t=> Disabled redirect page."
-msgstr "\t=> Désactiver la page de redirection."
+msgid "\t    => Disabled redirect page."
+msgstr "\t    => Désactiver la page de redirection."
 
 # ## CTadmin ###
 msgid "the selected user is: "
