modifié :         locale/ctparental.pot

--- a/locale/ctparental.pot
+++ b/locale/ctparental.pot
@@ -7,7 +7,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.2\n"
+"X-Generator: Poedit 1.8.11\n"
 "Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "Language: fr\n"
@@ -154,117 +154,117 @@ msgid "Use"
 msgstr ""
 
 msgid ""
-"\t=> Install parental control on the computer (desktop PC). Can be used with\n"
-"\t   an additional parameter to specify a source path for the redirection page.\n"
-"\t   example: CTparental -dirhtml -i /home/toto/html/\n"
-"\t   if no option a default page is used."
+"\t    => Install parental control on the computer (desktop PC). Can be used with\n"
+"\t      an additional parameter to specify a source path for the redirection page.\n"
+"\t      example: CTparental -dirhtml -i /home/toto/html/\n"
+"\t      if no option a default page is used."
 msgstr ""
 
-msgid "\t=> uninstall the Parental Control Computer (desktop PC)"
+msgid "\t    => uninstall the Parental Control Computer (desktop PC)"
 msgstr ""
 
-msgid "\t=> updates parental control from the blacklist of the University of Toulouse"
+msgid "\t    => updates parental control from the blacklist of the University of Toulouse"
 msgstr ""
 
-msgid "\t=> To be done after each change of the file $DNS_FILTER_OSSI"
+msgid "\t    => To be done after each change of the file $DNS_FILTER_OSSI"
 msgstr ""
 
-msgid "\t=> To be done after each change of the file $DREAB"
+msgid "\t    => To be done after each change of the file $DREAB"
 msgstr ""
 
-msgid "\t=> Enable parental control"
+msgid "\t    => Enable parental control"
 msgstr ""
 
-msgid "\t=> Disable parental control"
-msgstr ""
-
-msgid ""
-"\t=> Set the filter mode by whitelist or blacklist (default)\n"
-"\t   and the categories that you want to activate."
-msgstr ""
-
-msgid "\t=> Reset the default active categories and blacklist filtering."
-msgstr ""
-
-msgid "\t=> Enable and configure the login time restrictions for users."
-msgstr ""
-
-msgid "\t=> Disable the login time restrictions for users."
+msgid "\t    => Disable parental control"
 msgstr ""
 
 msgid ""
-"\t=> updates the redirect page from a source directory or default.\n"
-"\t   examples:\n"
-"\t           - With a source directory: CTparental -uhtml -dirhtml /home/toto/html/\n"
-"\t           - Default: CTparental -uhtml\n"
-"\t   also lets you change the login couple password of the web interface."
+"\t    => Set the filter mode by whitelist or blacklist (default)\n"
+"\t      and the categories that you want to activate."
 msgstr ""
 
-msgid "\t=> Enable the automatic update of the Toulouse blacklist (every 7 days)."
+msgid "\t    => Reset the default active categories and blacklist filtering."
 msgstr ""
 
-msgid "\t=> Disable the automatic update of the Toulouse blacklist."
+msgid "\t    => Enable and configure the login time restrictions for users."
 msgstr ""
 
-msgid "\t=> as -dl but only if there is no update for more than 7 days."
+msgid "\t    => Disable the login time restrictions for users."
 msgstr ""
 
 msgid ""
-"\t=> if placed after -i or -u allows not install / uninstall the dependencies, useful if\n"
-"\t   we prefer to install them by hand, or for the postinst and prerm script of deb.\n"
-"\t   examples:\n"
-"\t   CTparental -i -nodep\n"
-"\t   CTparental -dirhtml -i /home/toto/html/ -nodep\n"
-"\t   CTparental -u -nodep"
+"\t    => updates the redirect page from a source directory or default.\n"
+"\t      examples:\n"
+"\t              - With a source directory: CTparental -uhtml -dirhtml /home/toto/html/\n"
+"\t              - Default: CTparental -uhtml\n"
+"\t      also lets you change the login couple password of the web interface."
 msgstr ""
 
-msgid "\t=> used only for the postinst and prerm script."
+msgid "\t    => Enable the automatic update of the Toulouse blacklist (every 7 days)."
+msgstr ""
+
+msgid "\t    => Disable the automatic update of the Toulouse blacklist."
+msgstr ""
+
+msgid "\t    => as -dl but only if there is no update for more than 7 days."
 msgstr ""
 
 msgid ""
-"\t=> Enable a group of privileged users that will not undergo filtering.\n"
-"\t   exemples:\n"
-"\t           CTparental.sh -gctulist\n"
-"\t           Comment all users that you want to filter in $FILE_GCTOFFCONF\n"
-"\t           CTparental -gctalist"
+"\t    => if placed after -i or -u allows not install / uninstall the dependencies, useful if\n"
+"\t      we prefer to install them by hand, or for the postinst and prerm script of deb.\n"
+"\t      examples:\n"
+"\t              CTparental -i -nodep\n"
+"\t              CTparental -dirhtml -i /home/toto/html/ -nodep\n"
+"\t              CTparental -u -nodep"
 msgstr ""
 
-msgid "\t=> Disable privileged group."
+msgid "   => used only for the postinst and prerm script."
+msgstr ""
+
+msgid ""
+"\t    => Enable a group of privileged users that will not undergo filtering.\n"
+"\t      exemples:\n"
+"\t              CTparental -gctulist\n"
+"\t              Comment all users that you want to filter in $FILE_GCTOFFCONF\n"
+"\t              CTparental -gctalist"
+msgstr ""
+
+msgid "\t    => Disable privileged group."
 msgstr ""
 
 msgid "all users of the system undergo the filtering!"
 msgstr ""
 
-msgid "\t=> Update the config file ,"
+msgid "\t    => Update the config file ,"
 msgstr ""
 
-msgid "\t=> Add / Delete users in the ctoff group based on the config file, $FILE_GCTOFFCONF"
+msgid "\t    => Add / Delete users in the ctoff group based on the config file, $FILE_GCTOFFCONF"
 msgstr ""
 
-msgid "\t=> Enable rules of custom firewall."
+msgid "\t    => Enable rules of custom firewall."
 msgstr ""
 
-msgid "\t=> Disable rules of custom firewall."
-msgstr ""
-
-msgid ""
-"\t=> Export configuration.\n"
-"\t   exemple:\n"
-"\t           CTparental -exp /home/myhomedir/"
+msgid "\t    => Disable rules of custom firewall."
 msgstr ""
 
 msgid ""
-"\t=> Import a configuration.\n"
-"\t   exemple:\n"
-"\t           CTparental -imp /home/myhomedir/CTparental.conf.yy.mm.dd.tar.gz"
+"\t    => Export configuration.\n"
+"\t      exemple:\n"
+"\t              CTparental -exp /home/myhomedir/"
 msgstr ""
 
 msgid ""
-"\t=> For debugging only.\n"
-"\t   Enabling dnsmasq query log in the /var/log/dnsmasq.query.log file."
+"\t    => Import a configuration.\n"
+"\t      exemple:\n"
+"\t              CTparental -imp /home/myhomedir/CTparental.conf.yy.mm.dd.tar.gz"
 msgstr ""
 
-msgid "\t=> To disable dnsmasq query log in /var/log/dnsmasq.query.log ."
+msgid ""
+"   => For debugging only.\n"
+"\t      Enabling dnsmasq query log in the /var/log/dnsmasq.query.log file."
+msgstr ""
+
+msgid "  => To disable dnsmasq query log in /var/log/dnsmasq.query.log ."
 msgstr ""
 
 msgid ""
@@ -322,22 +322,22 @@ msgstr ""
 msgid "error recovering network settings"
 msgstr ""
 
-msgid "\t=> Enable the superuser of grub2."
+msgid "    => Enable the superuser of grub2."
 msgstr ""
 
-msgid "\t=> Disable the superuser of grub2."
+msgid "    => Disable the superuser of grub2."
 msgstr ""
 
-msgid "\t=> Disable default rules privoxy."
+msgid "\t    => Disable default rules privoxy."
 msgstr ""
 
-msgid "\t=> Enable default rules privoxy. (default is Enable)"
+msgid "\t    => Enable default rules privoxy. (default is Enable)"
 msgstr ""
 
-msgid "\t=> Enable redirect page."
+msgid "\t    => Enable redirect page."
 msgstr ""
 
-msgid "\t=> Disabled redirect page."
+msgid "\t    => Disabled redirect page."
 msgstr ""
 
 # ## CTadmin ###
