--- a/README.us
+++ b/README.us
@@ -1,5 +1,5 @@
-Parental control. web filtering iptables dnsmasq dansguardian privoxy lighttpd cron and the blacklist of the University of Toulouse. 
-a management connection schedule is also integrated a web interface (https://admin.ct.local) for setting all this. 
+Parental control. web filtering iptables dnsmasq dansguardian privoxy lighttpd cron and the blacklist of the University of Toulouse.
+a management connection schedule is also integrated a web interface (https://admin.ct.local) for setting all this.
 The login password pair must be entered to install, but can be changed later with the command CTparental -uhtml.
 
 Blacklist filtering or Whiteliste.
@@ -39,3 +39,29 @@ Added grub2 password, the password is persistent after an update-grub or lay a g
 Works with firefox, Midori, chromium ...
 
 custom business rules for iptables. Enabled with CTparental -ipton
+
+currently 3 languages are supported, English, French and Spanish.
+
+  by default the application takes the default language of the local system or if not supported english but we can
+
+  force with one of the following values provided you have it
+
+  activate in the local system example under Debian via the "dpkg-reconfigure locales" command.
+
+  possible values for LANG
+
+  es_AR.UTF-8, es_BO.UTF-8, es_CL.UTF-8, es_CO.UTF-8
+
+  es_CR.UTF-8, es_CU.UTF-8, es_DO.UTF-8, es_EC.UTF-8
+
+  es_ES.UTF-8, es_GT.UTF-8, es_HN.UTF-8, es_MX.UTF-8
+
+  es_NI.UTF-8, es_PA.UTF-8, es_PE.UTF-8, es_PR.UTF-8
+
+  es_PY.UTF-8, es_SV.UTF-8, es_US.UTF-8, es_UY.UTF-8
+
+  es_VE.UTF-8, en_BE.UTF-8, fr_CA.UTF-8, fr_CH.UTF-8
+
+  en_EN.UTF-8, en_LU.UTF-8
+
+  taking into account in the web interface requires to restart the service lighttpd
