--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ctparental (4.21.03-1.0) unstable; urgency=medium
+
+  * correction bug dans les iptables.
+  * gestion des log iptables par rsyslog + logrotate.
+
+ -- Guillaume marsat <CTparental1@laposte.net>  Sun, 11 Feb 2018 21:55:29 +0100
+
 ctparental (4.21.02-1.0) unstable; urgency=medium
 
   * correction bug de traduction fr et es.
