--- a/locale/fr/LC_MESSAGES/ctparental.po
+++ b/locale/fr/LC_MESSAGES/ctparental.po
@@ -7,7 +7,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 2.0.5\n"
 "Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "Language: fr\n"
@@ -308,6 +308,15 @@ msgstr ""
 "pour ajouter des règles personnalisées éditez le fichier \n"
 "$FILEIPTABLES \n"
 "puis relancez la commande CTparental -ipton"
+
+msgid ""
+"to add ipv4/ipv6 blacklist edit the file \n"
+"$FILEIPBLACKLIST \n"
+"then run the command CTparental -ipton"
+msgstr ""
+"pour ajouter une liste noire d' ipv4 et/ou ipv6, éditez le fichier \n"
+"$FILEIPBLACKLIST \n"
+"puis exécutez la commande CTparental -ipton"
 
 msgid "Unknown argument"
 msgstr "Argument inconnu"
