modifié :         locale/es/LC_MESSAGES/ctparental.mo 	modifié :         locale/es/LC_MESSAGES/ctparental.po

--- a/locale/es/LC_MESSAGES/ctparental.po
+++ b/locale/es/LC_MESSAGES/ctparental.po
@@ -7,7 +7,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 2.0.5\n"
 "Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "Language: es\n"
@@ -308,6 +308,15 @@ msgstr ""
 "para añadir reglas personalizadas editar el archivo \n"
 "$FILEIPTABLES \n"
 "luego reinicie el comando CTparental -ipton"
+
+msgid ""
+"to add ipv4/ipv6 blacklist edit the file \n"
+"$FILEIPBLACKLIST \n"
+"then run the command CTparental -ipton"
+msgstr ""
+"para agregar una lista negra de ipv4 y/o ipv6, edite el archivo \n"
+"$FILEIPBLACKLIST \n"
+"luego ejecuta el comando CTparental -ipton"
 
 msgid "Unknown argument"
 msgstr "Argumento desconocido"
